--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <script src="https://code.jquery.com/jquery.js"></script>
         <script src="js/catalog.js"></script>
 
     </head>
@@ -22,16 +23,16 @@
                     <div class="collapse" id="collapsePlotA">
                         <div class="card-body">
                             <div>
-                                Olives 1:<br>
-                                <div>
-                                    &nbsp;&nbsp;&nbsp;Watered 10 days ago<br>
+                                Olives 1:&nbsp;&nbsp;&nbsp;<button class='btn btn-primary btn-sm' id="olives1Water">Water</button><br>
+                                <div id="olives1body">
+                                    &nbsp;&nbsp;&nbsp;Watered 10 hours ago<br>
                                     &nbsp;&nbsp;&nbsp;Harvest in 20 days<br>
                                     &nbsp;&nbsp;&nbsp;Crop yield 90 bushels<br><br>
                                 </div>
         
-                                Celery 1:<br>
-                                <div>
-                                    &nbsp;&nbsp;&nbsp;Watered 10 days ago<br>
+                                Celery 1:&nbsp;&nbsp;&nbsp;<button class='btn btn-primary btn-sm' id="celery1Water">Water</button><br>
+                                <div id="celery1body">
+                                    &nbsp;&nbsp;&nbsp;Watered 10 hours ago<br>
                                     &nbsp;&nbsp;&nbsp;Harvest in 20 days<br>
                                     &nbsp;&nbsp;&nbsp;Crop yield 90 bushels<br><br>
                                 </div>
@@ -47,16 +48,16 @@
                     <div class="collapse" id="collapsePlotB">
                         <div class="card-body">
                             <div>
-                                Olives 2:<br>
-                                <div>
-                                    &nbsp;&nbsp;&nbsp;Watered 10 days ago<br>
+                                Olives 2&nbsp;&nbsp;&nbsp;<button class='btn btn-primary btn-sm' id="olives2Water">Water</button><br>
+                                <div id="olives2body">
+                                    &nbsp;&nbsp;&nbsp;Watered 10 hours ago<br>
                                     &nbsp;&nbsp;&nbsp;Harvest in 20 days<br>
                                     &nbsp;&nbsp;&nbsp;Crop yield 90 bushels<br><br>
                                 </div>
 
-                                Celery 2:<br>
-                                <div>
-                                    &nbsp;&nbsp;&nbsp;Watered 10 days ago<br>
+                                Celery 2&nbsp;&nbsp;&nbsp;<button class='btn btn-primary btn-sm' id="celery2Water">Water</button><br>
+                                <div id="celery2body">
+                                    &nbsp;&nbsp;&nbsp;Watered 10 hours ago<br>
                                     &nbsp;&nbsp;&nbsp;Harvest in 20 days<br>
                                     &nbsp;&nbsp;&nbsp;Crop yield 90 bushels<br><br>
                                 </div>
@@ -76,7 +77,7 @@
                     <h4>Calendar</h4>
                 </a>
                 <a href="database.html">
-                    <h4>Database</h4>
+                    <h4>Encyclopedia</h4>
                 </a>
                 <a href="bulletin.html">
                     <h4>Bulletin</h4>
@@ -88,6 +89,5 @@
         <!-- javascript -->
         <script src="https://code.jquery.com/jquery.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/database.js"></script>
 	</body>
 </html>
