--- a/database.html
+++ b/database.html
@@ -11,7 +11,7 @@
     </head>
 	<body>
         <nav class="navbar top nav-bar-custom">
-            <h1>Catalog</h1>
+            <h1>Crop Encyclopedia</h1>
         </nav>
 
         <div class="pre-scrollable text-white" style="max-height: 83vh" id="cropDatabase">
@@ -56,7 +56,7 @@
                     <h4>Calendar</h4>
                 </a>
                 <a href="database.html">
-                    <h4>Database</h4>
+                    <h4>Encyclopedia</h4>
                 </a>
                 <a href="bulletin.html">
                     <h4>Bulletin</h4>
