--- a/index.html
+++ b/index.html
@@ -26,44 +26,13 @@
 
     </head>
 	<body>
-        <nav class="navbar top nav-bar-custom">
-            <h1>Map</h1>
-            <input type="text" placeholder="Search..">
-        </nav>
         <div>
-            <br>
-            <br>
-            <br>
-        </div>
-        <img src="images/map.png" width="500" height="200" alt="gardenMapAll" usemap="#gardenMap">
+            This is very much a WIP. Most functionality has not been implemented.<br>
+            There is no server backend, so any changes you make to a page is reset once you leave the page.<br>
+            There is no login/profile. The prototype assumes you are logged in as Leo, who presumbly has admin rights.<br><br>
 
-        <map name="gardenMap" id="gardenMap">
-            <area shape="rect" coords="20,15,170,140" href="#" alt="sectorA" id="sectorA">
-            <area shape="rect" coords="170,15,330,140" href="#" alt="sectorB" id="sectorB">
-            <area shape="rect" coords="20,140,330, 200" href="#" alt="sectorC" id="sectorC">
-        </map>
-        <br><br><br>
-        <div class="text-center">
-            <a href="catalog.html" class="btn btn-success" type="button">Crop List</a>
+            <a href="map.html">Onward!</a>
         </div>
-
-        <nav class="navbar fixed-bottom nav-bar-custom">
-            <a href="map.html">
-                <h4>Map</h4>
-            </a>
-            <a href="calendar.html">
-                <h4>Calendar</h4>
-            </a>
-            <a href="database.html">
-                <h4>Database</h4>
-            </a>
-            <a href="bulletin.html">
-                <h4>Bulletin</h4>
-            </a>
-            <a href="resources.html">
-                <h4>Resources</h4>
-            </a>
-        </nav>
         <!-- javascript -->
 		<script src="js/bootstrap.min.js"></script>
 	</body>
