--- a/resources.html
+++ b/resources.html
@@ -40,7 +40,7 @@
                     <h4>Calendar</h4>
                 </a>
                 <a href="database.html">
-                    <h4>Database</h4>
+                    <h4>Encyclopedia</h4>
                 </a>
                 <a href="bulletin.html">
                     <h4>Bulletin</h4>
