--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             There is no server backend, so any changes you make to a page is reset once you leave the page.<br>
             There is no login/profile. The prototype assumes you are logged in as Leo, who presumbly has admin rights.<br><br>
 
-            <a href="map.html">Onward!</a>
+            <a class='btn btn-success' href="map.html">Onward!</a>
         </div>
         <!-- javascript -->
 		<script src="js/bootstrap.min.js"></script>
