--- a/calendar.html
+++ b/calendar.html
@@ -26,7 +26,7 @@
                     <ul>
                       <li class="prev">&#10094;</li>
                       <li class="next">&#10095;</li>
-                      <li>August<br><span style="font-size:18px">2017</span></li>
+                      <li>August<br><span style="font-size:18px">2018</span></li>
                     </ul>
                   </div>
                   
@@ -50,14 +50,14 @@
                     <li id="day" name="7">7</li>
                     <li id="day" name="8">8</li>
                     <li id="day" name="9">9</li>
-                    <li id="day" name="10"><span class="active2">10</span></li>
+                    <li id="day" class="active2" name="10">10</li>
                     <li id="day" name="11">11</li>
                     <li id="day" name="12">12</li>
                     <li id="day" name="13">13</li>
                     <li id="day" name="14">14</li>
                     <li id="day" name="15">15</li>
                     <li id="day" name="16">16</li>
-                    <li id="day" name="17"><span class="active2 active1">17</span></li>
+                    <li id="day" name="17" class="active2 active1">17</li>
                     <li id="day" name="18">18</li>
                     <li id="day" name="19">19</li>
                     <li id="day" name="20">20</li>
@@ -80,24 +80,28 @@
                       Blue is harvest day for a crop.
                   </div>
 
-                  <!-- Modal -->
-            <div class="modal fade" id="inputModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <!-- Modal for viewing sign-ups -->
+            <div class="modal fade" id="detailModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                 <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Create New Bulletin</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Details</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 </div>
                 <div class="modal-body">
-                    <input id="newBulletinTitle" type="text" style="width:100%" placeholder="Title">
-                    <br\>
-                    <textarea id="newBulletinBody" style="width:100%; height:300px" placeholder="Body"></textarea>
+                    <div id="harvestCrops"></div>
+                    <div id="listOfNames"></div>
+                    <br>
+                    Sign up if you're coming!<br>
+                    <input id="newName" type="text" style="width:100%" placeholder="Name">
+                    <br>
+                    <input id="newTime" type="text" style="width:100%" placeholder="Time">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button id="addBulletin" type="button" class="btn btn-success" data-dismiss="modal">Add Bulletin</button>
+                    <button id="addTime" type="button" class="btn btn-success" data-dismiss="modal">Submit Availability</button>
                 </div>
                 </div>
                 </div>
