--- a/database.html
+++ b/database.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script src="js/catalog.js"></script>
+        <script src="js/database.js"></script>
 
     </head>
 	<body>
@@ -17,36 +17,59 @@
         <div class="pre-scrollable text-white" style="max-height: 83vh" id="cropDatabase">
             <div class="custom-card">
                 <div class="card card-custom" >
-                    <div class="card-header card-header-custom" data-toggle="collapse" data-target="#collapseOlives"><h3>Olives</h3>
+                    <div class="card-header card-header-custom" id="olivesHeader" data-toggle="collapse"  data-target="#collapseOlives"><h3>Olives</h3>
                     </div>
                     <div class="collapse" id="collapseOlives">
-                        <div class="card-body">
+                        <div class="card-body" id="olivesBody">
                             <div>
                                 Water every 10 days<br>
                                 Harvest every 20 days<br>
                                 Crop yield 90 bushels per seed planted<br><br>
-                                <button type="button" class="btn btn-success">Edit</button>
                             </div>
+                            <button id="editOlives" type="button" data-toggle="modal" data-target="#inputModal" class="btn btn-success">Edit</button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="custom-card">
                 <div class="card card-custom" >
-                    <div class="card-header card-header-custom" data-toggle="collapse" data-target="#collapseCarrots"><h3>Carrots</h3></div>
+                    <div class="card-header card-header-custom" data-toggle="collapse" data-target="#collapseCarrots" id="carrotsHeader"><h3>Carrots</h3></div>
                     <div class="collapse" id="collapseCarrots">
-                            <div class="card-body">
+                            <div class="card-body" id="carrotsBody">
                                 <div>
                                     Water every 10 days<br>
                                     Harvest every 20 days<br>
                                     Crop yield 90 bushels per seed planted<br><br>
-                                    <button type="button" class="btn btn-success">Edit</button>
                                  </div>
+                                 <button id="editCarrots" type="button" data-toggle="modal" data-target="#inputModal" class="btn btn-success">Edit</button>
                             </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="inputModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Edit entry</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    </div>
+                    <div class="modal-body">
+                        <input id="newBulletinTitle" type="text" style="width:100%" placeholder="Name">
+                        <br\>
+                        <textarea id="newBulletinBody" style="width:100%; height:300px" placeholder="Body">Editing is not implemented yet</textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button id="addBulletin" type="button" class="btn btn-success" data-dismiss="modal">Save Changes</button>
+                    </div>
+                </div>
+                </div>
+            </div>
 
         <nav class="navbar fixed-bottom nav-bar-custom">
                 <a href="map.html">
