--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     </head>
 	<body>
         <div>
+            READ BEFORE PROCEEDING
+            <br><br>
             This is very much a WIP. Most functionality has not been implemented. <br>
             There is no server backend, so any changes you make to a page is reset once you leave the page.<br>
-            There is no login/profile. The prototype assumes you are logged in as Leo, who presumbly has admin rights.<br><br>
+            There is no login/profile at the moment. The prototype assumes you are logged in as Leo, who has admin rights.<br><br>
 
             <a class='btn btn-success' href="map.html">Onward!</a>
         </div>
