--- a/map.html
+++ b/map.html
@@ -28,7 +28,6 @@
 	<body>
         <nav class="navbar top nav-bar-custom">
             <h1>Map</h1>
-            <input type="text" placeholder="Search..">
         </nav>
         <div>
             <br>
@@ -44,7 +43,7 @@
         </map>
         <br><br><br>
         <div class="text-center">
-            <a href="catalog.html" class="btn btn-success" type="button">Crop List</a>
+            <a href="catalog.html" class="btn btn-success" type="button">List View</a>
         </div>
 
         <nav class="navbar fixed-bottom nav-bar-custom">
