--- a/calendar.html
+++ b/calendar.html
@@ -42,7 +42,7 @@
                   
                   <ul class="days" id="calendarDays"> 
                     <li id="day" name="1">1</li>
-                    <li id="day" name="2">2</li>
+                    <li id="day" class="active3" name="2">2</li>
                     <li id="day" name="3">3</li>
                     <li id="day" name="4">4</li>
                     <li id="day" name="5">5</li>
@@ -78,6 +78,7 @@
                       Legend:<br>
                       Green border is current day.<br>
                       Blue is harvest day for a crop.
+                      Black lettering means people can help.
                   </div>
 
                   <!-- Modal for viewing sign-ups -->
@@ -85,7 +86,7 @@
                 <div class="modal-dialog" role="document">
                 <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Details</h5>
+                <h5 class="modal-title" id="modalLabel">Details</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -97,7 +98,7 @@
                     Sign up if you're coming!<br>
                     <input id="newName" type="text" style="width:100%" placeholder="Name">
                     <br>
-                    <input id="newTime" type="text" style="width:100%" placeholder="Time">
+                    <input id="newTime" type="text" style="width:100%" placeholder="Time (e.g. 3 PM to 5 PM)">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -109,19 +110,19 @@
 
                   <nav class="navbar fixed-bottom nav-bar-custom">
                         <a href="map.html">
-                            <h4>Map</h4>
+                            <h7>Map</h7>
                         </a>
                         <a href="calendar.html">
-                            <h4>Calendar</h4>
+                            <h7>Calendar</h7>
                         </a>
                         <a href="database.html">
-                            <h4>Encyclopedia</h4>
+                            <h7>Encyclopedia</h7>
                         </a>
                         <a href="bulletin.html">
-                            <h4>Bulletin</h4>
+                            <h7>Bulletin</h7>
                         </a>
                         <a href="resources.html">
-                            <h4>Resources</h4>
+                            <h7>Resources</h7>
                         </a>
                     </nav>
         <!-- javascript -->
