--- a/calendar.html
+++ b/calendar.html
@@ -77,8 +77,13 @@
                   <div>
                       Legend:<br>
                       Green border is current day.<br>
-                      Blue is harvest day for a crop.
+                      Blue is harvest day for a crop.<br>
                       Black lettering means people can help.
+                      <br>
+                      <br>
+                      <br>
+                      <br>
+                      <br>
                   </div>
 
                   <!-- Modal for viewing sign-ups -->
