--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,6 @@
             <h1>Garden Overview</h1>
         </nav>
 
-        <div class="pre-scrollable text-white" style="max-height: 80vh" id="cropDatabase">
             <div class="custom-card">
                 <div class="card card-custom" >
                     <div class="card-header card-header-custom" data-toggle="collapse" data-target="#collapsePlotA"><h3>Plot A</h3>
@@ -64,8 +63,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+            </div><br><br><br><br>
 
         <nav class="navbar fixed-bottom nav-bar-custom">
             <a href="map.html">
