--- a/database.html
+++ b/database.html
@@ -14,7 +14,6 @@
             <h1>Crop Encyclopedia</h1>
         </nav>
 
-        <div class="pre-scrollable text-white" style="max-height: 80vh" id="cropDatabase">
             <div class="custom-card">
                 <div class="card card-custom" >
                     <div class="card-header card-header-custom" id="olivesHeader" data-toggle="collapse"  data-target="#collapseOlives"><h3>Olives</h3>
@@ -68,8 +67,7 @@
                         <button id="addBulletin" type="button" class="btn btn-success" data-dismiss="modal">Save Changes</button>
                     </div>
                 </div>
-                </div>
-            </div>
+            </div><br><br><br><br>
 
             <nav class="navbar fixed-bottom nav-bar-custom">
                 <a href="map.html">
