--- a/catalog.html
+++ b/catalog.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
             </div><br><br><br><br>
-
+        </div>
         <nav class="navbar fixed-bottom nav-bar-custom">
             <a href="map.html">
                 <h7>Map</h7>
