--- a/database.html
+++ b/database.html
@@ -53,8 +53,8 @@
                 <div class="modal-content">
                     <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Edit entry</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">Delete Entry</span>
                     </button>
                     </div>
                     <div class="modal-body">
@@ -63,11 +63,12 @@
                         <textarea id="newBulletinBody" style="width:100%; height:300px" placeholder="Body">Editing is not implemented yet</textarea>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                         <button id="addBulletin" type="button" class="btn btn-success" data-dismiss="modal">Save Changes</button>
                     </div>
                 </div>
             </div><br><br><br><br>
+        </div>
 
             <nav class="navbar fixed-bottom nav-bar-custom">
                 <a href="map.html">
