--- a/map.html
+++ b/map.html
@@ -43,8 +43,12 @@
         </map>
         <br><br><br>
         <div class="text-center">
-            <a href="catalog.html" class="btn btn-success" type="button">List View</a>
+            <a href="catalog.html" class="btn btn-success" type="button">Detailed Information of Garden</a>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
 
         <nav class="navbar fixed-bottom nav-bar-custom">
             <a href="map.html">
